<resources>
    <string name="app_name">AndroidTest</string>

    <!-- Main Screen Strings -->
    <string name="activity_main_title">Coding Tasks</string>
    <string name="chat_button">CHAT</string>
    <string name="login_button">LOG IN</string>
    <string name="animation_button">ANIMATION</string>
    <string name="chat">CHAT</string>
    <string name="password">Password</string>
    <string name="info_datechnologies_co">info@DATechnologies.co</string>
    <string name="login">LOGIN</string>
    <string name="fade_in">FADE IN</string>

</resources>
