<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/gpc_sunset"
    tools:context=".login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:gravity="top"
        android:orientation="vertical">

        <EditText
            android:id="@+id/login_userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"
            android:text="@string/info_datechnologies_co"
            android:inputType="text"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/input_field_text"
            android:textColorHint="@color/hint_field_text"/>

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="24dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/input_field_text"
            android:textColorHint="@color/hint_field_text"
            android:background="@drawable/line"/>

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="26dp"
            android:text="@string/login"
            android:textColor="@color/button_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:background="@drawable/button_style"
            android:layout_marginBottom="24dp"/>
    </LinearLayout>

</RelativeLayout>