<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/gpc_background">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:gravity="center_vertical"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="214dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/home_button_style"
            android:gravity="start"
            android:focusable="true"
            android:onClick="onChatClicked"
            android:alpha="0.8">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="22dp"
                    android:layout_marginEnd="16dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_chat" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/chat_button"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/button_text_size" />

            </LinearLayout>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/home_button_style"
            android:clickable="true"
            android:gravity="start"
            android:focusable="true"
            android:onClick="onLoginClicked"
            android:alpha="0.8">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="22dp"
                    android:layout_marginEnd="16dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_lock" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/login_button"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/button_text_size" />

            </LinearLayout>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginBottom="213dp"
            android:background="@drawable/home_button_style"
            android:clickable="true"
            android:gravity="start"
            android:focusable="true"
            android:onClick="onAnimationClicked"
            android:alpha="0.8">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="22dp"
                    android:layout_marginEnd="16dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_animation"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/animation_button"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/button_text_size" />

            </LinearLayout>

        </RelativeLayout>


    </LinearLayout>

</RelativeLayout>
